@@ -4,4 +4,4 @@ baobab/data/baobab.desktop.in
 gnome-dictionary/data/GNOME_DictionaryApplet.server.in
 gnome-dictionary/data/gnome-dictionary.desktop.in
 gnome-dictionary/data/french.desktop.in
-logview/gnome-system-log.desktop.in
+logview/data/gnome-system-log.desktop.in
