@@ -1,3 +1,7 @@
+2009-01-08  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* POTFILES.skip: fix distcheck.
+
 2009-01-05  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* nb.po: Updated Norwegian bokmål translation.
